<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fit Control</string>
    <string name="action_adicionar">Add</string>
    <string name="action_sobre">About</string>
    <string name="action_editar">Edit</string>
    <string name="action_excluir">Delete</string>
    <string name="action_limpar">Clear</string>
    <string name="action_salvar">Save</string>
    <string name="autoria_aluno">Student Name:</string>
    <string name="autoria_curso">Course:</string>
    <string name="autoria_email">Email:</string>
    <string name="autoria_descricao">Description:</string>
    <string name="exercicio_corrida">Running</string>
    <string name="exercicio_natacao">Swimming</string>
    <string name="exercicio_ciclismo">Cycling</string>
    <string name="exercicio_pular_corda">Jump Rope</string>
    <string name="exercicio_danca">Dancing</string>
    <string name="exercicio_agachamento">Squats</string>
    <string name="exercicio_flexao_de_braco">Push-ups</string>
    <string name="exercicio_abdominais">Abdominal Crunches</string>
    <string name="exercicio_levantamento_de_peso">Weightlifting</string>
    <string name="exercicio_barra_fixa">Pull-ups</string>
    <string name="exercicio_tipo_aerobico">Aerobic</string>
    <string name="exercicio_tipo_anaerobico">Anaerobic</string>
    <string name="informacoes_limpadas">Information Cleared</string>
    <string name="preencha_todos_campos">Please Fill in All Fields</string>
    <string name="concluido_label">Completed</string>
    <string name="nao_concluido">Not Completed</string>
    <string name="nome_do_aluno_label">Student Name:</string>
    <string name="curso_label">Course:</string>
    <string name="email_label">Email:</string>
    <string name="descricao_label">Description:</string>
    <string name="nome_do_exercicio_label">Exercise Name</string>
    <string name="tipo_de_exercicio_label">Exercise Type</string>
    <string name="aerobico">Aerobic</string>
    <string name="anaerobico">Anaerobic</string>
    <string name="exercicio_concluido_label">Exercise Completed</string>
    <string name="duracao_do_exercicio_label">Exercise Duration (minutes)</string>
    <string name="nome_label">Name</string>
    <string name="tipo_label">Type</string>
    <string name="duracao_label">Duration</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="nome_do_aluno">Student Name:</string>
    <string name="curso">Course:</string>
    <string name="email">Email:</string>
    <string name="descricao">Description:</string>
    <string name="concluido">Completed</string>
    <string name="nome_do_exercicio">Exercise Name</string>
    <string name="tipo_de_exercicio">Exercise Type</string>
    <string name="exercicio_concluido">Exercise Completed</string>
    <string name="duracao_do_exercicio">Exercise Duration</string>
    <string name="duracao_minutos">Duration in Minutes</string>
    <string name="nome">Name</string>
    <string name="tipo">Type</string>
    <string name="duracao">Duration</string>
    <string name="nome_hint">Enter Name Here</string>
    <string name="name">Gabriel de Paula Vieira Cau</string>
    <string name="course">Software Engineering</string>
    <string name="app_description">Fit Control is a fitness exercise control application that allows users to record, list, and manage their exercises, helping to maintain an activity history and track progress. Users can add, edit, and delete exercises, as well as mark exercises as completed.</string>
    <string name="exercise_duration_description">Exercise Duration</string>
    <string name="alterar_exercicio">Change Exercise</string>
    <string name="novo_exercicio">New Exercise</string>
    <string name="nome_treino_hint">Enter Training Name</string>
    <string name="alterar_treino">Change Training</string>
    <string name="novo_treino">New Training</string>
    <string name="treino_do_exercicio">Exercise Training</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="aerobic_content_description">Aerobic Description</string>
    <string name="aerobic">Aerobic</string>
    <string name="anaerobic_content_description">Anaerobic Description</string>
    <string name="anaerobic">Anaerobic</string>
    <string name="training">Training</string>
    <string name="training_exercise_content_description">Training Exercise Description</string>
    <string name="data_cadastro">Registration Date</string>
    <string name="nome_vazio">Empty Name</string>
    <string name="tipo_vazio">Empty Type</string>
    <string name="data_invalida">Invalid Date</string>
    <string name="deseja_realmente_apagar">Do You Really Want to Delete</string>
    <string name="treinos">Trainings</string>
    <string name="descricao_vazia">Empty Description</string>
    <string name="descricao_usada">Used Description</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="novo">New</string>
    <string name="abrir">Open</string>
    <string name="apagar">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="exercise_completed">Exercise Completed</string>
    <string name="insira_data_cadastro">Insert Registration Date</string>
    <string name="Cardio">Cardio</string>
    <string name="Hipertrofia">Hypertrophy</string>
    <string name="apague_antes">This Value Cannot Be Deleted, It Is in Use</string>
    <string name="campo_vazio">Empty</string>
</resources>