<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/editTextExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/exercise_name"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExerciseName" />

        <TextView
            android:id="@+id/textViewExerciseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_type"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextExerciseName"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" />

        <RadioGroup
            android:id="@+id/radioGroupExerciseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewExerciseType"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp">

            <RadioButton
                android:id="@+id/radioButtonAerobic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/aerobic_content_description"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/aerobic" />

            <RadioButton
                android:id="@+id/radioButtonAnaerobic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/anaerobic_content_description"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/anaerobic" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxExerciseCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/exercise_completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupExerciseType" />

        <TextView
            android:id="@+id/textViewTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxExerciseCompleted"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" />

        <Spinner
            android:id="@+id/spinnerTrainingExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/training_exercise_content_description"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTraining" />

        <TextView
            android:id="@+id/textViewDataCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_cadastro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTrainingExercise" />

        <EditText
            android:id="@+id/editTextDataCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/insira_data_cadastro"
            android:minHeight="48dp"
            android:editable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataCadastro" />
    </LinearLayout>
</ScrollView>
